-Added Caliburn.ShellFramework with History, Results, MessagBox, Questions, Menu, Resources, etc.
-Added IInputManager and DefaultInputManager for managing control focus and shortcut keys.
-Removed support for Container Custom Lifetimes.  Caliburn itself does not use this and it can now easilty be added by developers who wish to.

V1.1 Release
-Fixed an issue in the WPF version of InteractionNode.
-Fixed an event invocation order issue and a parameter update issue related to routed messages.
-Updated Spring.NET to version 1.3.0.
-Made DefaultWindowManager more friendly to WPF's NavigationWindow.
-Fixed a bug with non-modal window shutdown in DefaultWindowManager.
-Fixed a core bug in custom attribute discovery.
-Enabled routed messages to declare default handlers.  Now ActionMessage declares a default handler for its DataContext.  This solves several Menu routing issues.
-Fixed the apparently completely broken MEF adapter.
-Greatly improved the flexibility of the DefaultViewStrategy.
-Fixed a bug in the WPF DispatcherImpelmentation.
-Fixed a bug in PresenterManager and MultiPresenterManager which caused screen changes to the same screen.
-Enabled view chaching for Silverlight.
-Fixed some bugs in the LOB samples.
-Added Hyperlink/HyerlinkButton element defaults.
-Update StructureMap to version 2.6.1.
-Updated Windsor to version 2.1.1.
-Added official support for .NET 4.0.
-Fixed a bug in MultiPresenterManager for .NET 4.0.
-Updated to MEF Preview 9.

V1.1 Release Candidate
-Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
-Redesign of IThreadPool.  AsynchronousAction will now pass itself as state when enqueing the background task.
-Closed ticket #4672 by making PropertyChangedBase.PropertyChanged virtual.
-Applied jagregory's patch to add single key gestures to WPF and Caliburn.