@@ -83,6 +83,7 @@
     <Compile Include="IElementVisitor.cs" />
     <Compile Include="IElement.cs" />
     <Compile Include="IError.cs" />
+    <Compile Include="TestResultEnumerator.cs" />
     <Compile Include="TriggerValidator.cs" />
     <Compile Include="ValidationException.cs" />
     <Compile Include="ValidationResult.cs" />
@@ -99,6 +100,10 @@
     <ProjectReference Include="..\Caliburn.Core\Caliburn.Core.csproj">
       <Project>{D7357C4C-BFFF-4EE4-8D40-0803FAAFF38A}</Project>
       <Name>Caliburn.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Caliburn.PresentationFramework\Caliburn.PresentationFramework.csproj">
+      <Project>{4B343291-DB03-4ADA-96CD-3CFFA3C838D7}</Project>
+      <Name>Caliburn.PresentationFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
