@@ -37,6 +37,7 @@ V2 Alpha
 -Added Caliburn.ShellFramework with History, Results, MessagBox, Questions, Menu, Resources, etc.
 -Added IInputManager and DefaultInputManager for managing control focus and shortcut keys.
 -Removed support for Container Custom Lifetimes.  Caliburn itself does not use this and it can now easilty be added by developers who wish to.
+-Added TestResultEnumerator for easier unit testing of methods that return IEnumerable<IResult>
 
 V1.1 Release
 -Fixed an issue in the WPF version of InteractionNode.
